--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <elder.version>1.0.6</elder.version>
+    <elder.version>1.0.14</elder.version>
     <jdk.version>1.8</jdk.version>
-    <spring.boot.version>2.0.5.RELEASE</spring.boot.version>
+    <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
   </properties>
 
 	
@@ -56,6 +56,24 @@
         <artifactId>spring-boot-starter-web</artifactId>
         <version>${spring.boot.version}</version>
     </dependency>
+    
+    <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-websocket</artifactId>
+       <version>${spring.boot.version}</version>
+    </dependency>
+        
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-mongodb</artifactId>
+         <version>${spring.boot.version}</version>
+     </dependency>
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-test</artifactId>
+         <version>${spring.boot.version}</version>
+         <scope>test</scope>
+     </dependency>
     
   	<dependency>
   	  <groupId>fr.lirmm.graphik</groupId>
