--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=damn
-server.port=${PORT}
-spring.data.mongodb.uri:${MONGODB_URI}
+#server.port=${PORT}
+#spring.data.mongodb.uri:${MONGODB_URI}
