--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <elder.version>1.0.14</elder.version>
     <jdk.version>1.8</jdk.version>
     <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
+    
   </properties>
 
 	
@@ -33,6 +34,23 @@
               <artifactId>spring-boot-maven-plugin</artifactId>
               <version>${spring.boot.version}</version>
           </plugin>
+          
+          <plugin>
+		      <groupId>com.heroku.sdk</groupId>
+		      <artifactId>heroku-maven-plugin</artifactId>
+		      <version>2.0.6</version>
+		      <configuration>
+		          <appName>callicoder-heroku-maven-demo</appName>
+		          <includeTarget>false</includeTarget>
+		          <includes>
+		              <include>${project.build.directory}/${project.build.finalName}.jar</include>
+		          </includes>
+		          <jdkVersion>${jdk.version}</jdkVersion>
+		          <processTypes>
+		              <web>java $JAVA_OPTS -jar ${project.build.directory}/${project.build.finalName}.jar</web>
+		          </processTypes>
+		      </configuration>
+		  </plugin>
       </plugins>
   </build>
 
