--- a/pom.xml
+++ b/pom.xml
@@ -33,24 +33,18 @@
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-maven-plugin</artifactId>
               <version>${spring.boot.version}</version>
-          </plugin>
-          
-          <plugin>
-		      <groupId>com.heroku.sdk</groupId>
-		      <artifactId>heroku-maven-plugin</artifactId>
-		      <version>2.0.6</version>
-		      <configuration>
-		          <appName>callicoder-heroku-maven-demo</appName>
-		          <includeTarget>false</includeTarget>
-		          <includes>
-		              <include>${project.build.directory}/${project.build.finalName}.jar</include>
-		          </includes>
-		          <jdkVersion>${jdk.version}</jdkVersion>
-		          <processTypes>
-		              <web>java $JAVA_OPTS -jar ${project.build.directory}/${project.build.finalName}.jar</web>
-		          </processTypes>
+              <configuration>
+			      <fork>true</fork>
+			      <mainClass>fr.lirmm.graphik.elder.server.Application</mainClass>
 		      </configuration>
-		  </plugin>
+			  <executions>
+			    <execution>
+			      <goals>
+			        <goal>repackage</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+          </plugin>
       </plugins>
   </build>
 
