updated Procfile for Heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=damn
-#server.port=${PORT}
+server.port=${PORT:8080}
 #spring.data.mongodb.uri:${MONGODB_URI}
