--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=damn
-server.port=${PORT:8080}
-#spring.data.mongodb.uri:${MONGODB_URI}
+spring.profiles.active=dev
