updating before demo

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,4 @@
 server.port=${PORT:8080}
 spring.data.mongodb.uri:${MONGODB_URI}
+fr.lirmm.graphik.elder.server.jwtSecret=jwtLovesToMakeThingsComplecated
+fr.lirmm.graphik.elder.server.jwtExpiration=86400
