--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,19 @@
          <artifactId>spring-boot-starter-data-mongodb</artifactId>
          <version>${spring.boot.version}</version>
      </dependency>
+     
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-security</artifactId>
+         <version>${spring.boot.version}</version>
+     </dependency>
+     
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-mail</artifactId>
+         <version>${spring.boot.version}</version>
+     </dependency>
+     
      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
@@ -87,6 +100,12 @@
          <scope>test</scope>
      </dependency>
     
+    <dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt</artifactId>
+		<version>0.9.1</version>
+	</dependency>
+		
   	<dependency>
   	  <groupId>fr.lirmm.graphik</groupId>
  	  <artifactId>graal-elder</artifactId>
