--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=damn
+fr.lirmm.graphik.elder.server.jwtSecret=jwtElderSecretKey
+fr.lirmm.graphik.elder.server.jwtExpiration=86400
